--- a/advent-of-vue/package.json
+++ b/advent-of-vue/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vue-tsc --noEmit && vite build && vite preview"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
@@ -14,6 +14,7 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.20.5",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
