--- a/advent-of-vue/package.json
+++ b/advent-of-vue/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "debounce": "^1.2.1",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
     "vue-router": "4",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.20.5",
+    "@types/debounce": "^1.2.1",
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
