--- a/advent-of-vue/tsconfig.json
+++ b/advent-of-vue/tsconfig.json
@@ -12,11 +12,19 @@
     "sourceMap": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
-    "types": ["vuetify"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "types": [
+      "vuetify"
+    ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts",
