--- a/advent-of-vue/package.json
+++ b/advent-of-vue/package.json
@@ -2,7 +2,7 @@
   "name": "advent-of-code",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vue-tsc --noEmit && vite build && vite preview"
   },
